--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>3.9</version>
+        <version>4.51</version>
         <relativePath />
     </parent>
     <groupId>io.jenkins.plugins</groupId>
@@ -12,8 +12,7 @@
     <version>1.0.2-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
-        <jenkins.version>2.138.1</jenkins.version>
-        <java.level>8</java.level>
+        <jenkins.version>2.346.3</jenkins.version>
     </properties>
     <name>Quality Clouds Scan Plugin</name>
     <description>Run Quality Clouds Scans against your cloud instances.</description>
@@ -31,6 +30,17 @@
             <email>ignacio@qualityclouds.com</email>
         </developer>
     </developers>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.jenkins.tools.bom</groupId>
+                <artifactId>bom-2.138.x</artifactId>
+                <version>4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <repositories>
         <repository>
             <id>repo.jenkins-ci.org</id>
@@ -38,7 +48,7 @@
         </repository>
         <repository>
             <id>nexus</id>
-            <url>http://nexus.qualityclouds.com/repository/qc-group/</url>
+            <url>https://nexus.qualityclouds.com/repository/qc-group/</url>
         </repository>
     </repositories>
     <pluginRepositories>
@@ -62,7 +72,6 @@
         <dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>apache-httpcomponents-client-4-api</artifactId>
-			<version>4.5.3-2.0</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.jenkins-ci.plugins/spring-initalzr -->
@@ -75,7 +84,6 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
-            <version>2.1.9</version>
         </dependency>
 		
         <dependency>
@@ -104,7 +112,6 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>plain-credentials</artifactId>
-            <version>1.4</version>
         </dependency>
     </dependencies>
     
